2024-10-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha01: Sanitize';git push
	git tag -a 5.3.0-alpha01 -m 'Functionally identical to 5.2.9 except better S1D PFT/CFT labels';git push --tags

	* Replace auto-generated PFT/CFT labels with labels gleaned from global attributes

2024-10-21  Charlie Zender  <zender@uci.edu>

	* Infer/determine and use self-consistent pft_ntr_nbr_out, pft_crp_nbr_out, pft_nbr_out for both history/restart datasets

2024-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9: Empathy Card';git push
	git tag -a 5.2.9 -m 'all: NC_FillValue; ncclimo: fix bsh syn; ncks: S1D pft dsk rdr, topounits, workaround, pft crd, sanitize, fflush; ncremap: fix ECMWF IFS, eamxx pdq';git push --tags

	* Progress inferring pft_sng_out from global attributes, though remains off by default

	* Read pft_nbr_nbr_in from history files

2024-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha03: Palenque';git push
	git tag -a 5.2.9-alpha03 -m 'ncks: S1D finish topounits, workaround bad topos1d_[ij]xy, address sanitize';git push --tags

	* Activate pft_sng_out though disable inferring from global attributes

	* Enable Clang address sanitizer with -fsanitize=address

	* Account for lvl_nbr (i.e., ltype dimension) in unpacking nco_s1d_tpo variables

	* Change storage order ot nco_s1d_tpo to always be lat,lon

	* Discover buggy topos1d_[ij]xy in input files, provide workaround by replacing with grids1d_[ij]xy

	* Sanity check that tpo_nbr_in == grd_nbr_in

	* Sanity check that mec_nbr_in == mec_nbr_out

	* Correct argument order of nco_malloc_dbg() call in nco_cpy_var_val()

	* Define lnd_typ_crr=nco_lnd_ilun_nil for Gridcell and Topounit	variables so diagnostic printing can work

	* Print var_nm in nco_def_var() debugging output
