@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.0-alpha01
-@set doc-edition 5.3.0-alpha01
+@set nco-edition 5.3.0-alpha02
+@set doc-edition 5.3.0-alpha02
 @set copyright-years 1995--2024
 @set update-year 2024
-@set update-date 18 October 2024
+@set update-date 22 October 2024
 @set update-month October 2024
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
