@@ -1,5 +1,9 @@
 2024-10-22  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.0-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha02: Widow\'s Peak';git push
+	git tag -a 5.3.0-alpha02 -m 'fxm';git push --tags
+
 	* NCO 5.3.0-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha01: Sanitize';git push
 	git tag -a 5.3.0-alpha01 -m 'Functionally identical to 5.2.9 except better S1D PFT/CFT labels';git push --tags
